# pet-demo

./: README.md  WORKSPACE.bazel
proto/: BUILD.bazel
proto/pet/: common.proto  service.proto
service/: BUILD.bazel  main.py
